--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
 	"description": "A check management POS system built with React, GraphQL, and Next.js.",
 	"main": "index.js",
 	"scripts": {
-		"dev": "next",
+		"dev": "NODE_ENV=development node server.js",
 		"build": "next build",
-		"start": "next start"
+		"start": "NODE_ENV=production node server.js -p $PORT"
 	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/drewcook/you-got-served.git"
 	},
-	"keywords": [],
 	"author": "Althea Web Services, LLC <altheawebservices@gmail.com> (http://altheawebservices.com/)",
 	"license": "MIT",
 	"bugs": {
@@ -21,8 +20,13 @@
 	"homepage": "https://github.com/drewcook/you-got-served#readme",
 	"dependencies": {
 		"apollo-boost": "^0.3.1",
+		"apollo-server-express": "^2.5.0",
+		"compression": "^1.7.4",
+		"cors": "^2.8.5",
+		"express": "^4.16.4",
 		"graphql": "^14.3.0",
 		"graphql-tools": "^4.0.4",
+		"isomorphic-unfetch": "^3.0.0",
 		"next": "^8.1.0",
 		"react": "^16.8.6",
 		"react-apollo": "^2.5.5",
