--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"next": "^8.1.0",
 		"react": "^16.8.6",
 		"react-apollo": "^2.5.5",
+		"react-bootstrap": "^1.0.0-beta.8",
 		"react-dom": "^16.8.6"
 	}
 }
