--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
 	"scripts": {
 		"dev": "NODE_ENV=development node server.js",
 		"build": "next build",
-		"start": "NODE_ENV=production node server.js -p $PORT"
+		"start": "node server.js -p $PORT"
+	},
+	"engines": {
+		"node": "14.x",
+		"npm": "6.x"
 	},
 	"repository": {
 		"type": "git",
