--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
 	"description": "A check management POS system built with React, GraphQL, and Next.js.",
 	"main": "index.js",
 	"scripts": {
-		"dev": "NODE_ENV=development node server.js",
+		"dev": "next dev",
 		"build": "next build",
-		"start": "node server.js -p $PORT"
+		"start": "next start -p $PORT"
 	},
 	"engines": {
 		"node": "14.x",
